--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
@@ -30,7 +31,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "express-session": "^1.17.3",
     "passport": "^0.7.0",
+    "passport-42": "^1.2.6",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
@@ -43,6 +46,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth20": "^2.0.14",
